--- a/project/project.html
+++ b/project/project.html
@@ -18,16 +18,17 @@
 
     <h1>Mes projets</h1>
 
-    <div id="container-1">
+    <div class="container">
         <h2>Le musée du rêve</h2>
         <img src="../sources/Caspar_David_Friedrich_011.jpg">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-            sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Créer un musée virtuel, regroupant différentes oeuvres artistiques qui se rejoignent toutes autour d'un thème commun : le rêve. Ce musée est construit autour de 4 expositions : la représentation du rêve, l'irréel, le cauchemar et le surréalisme. Le développement m'a permis d'apprendre à utiliser rails. Projet étudiant.</p>
     </div>
+
+<!--     <div class="container">
+        <h2>Le musée du rêve</h2>
+        <img src="../sources/Caspar_David_Friedrich_011.jpg">
+        <p>Créer un musée virtuel, regroupant différentes oeuvres artistiques qui se rejoignent toutes autour d'un thème commun : le rêve. Ce musée est construit autour de 4 expositions : la représentation du rêve, l'irréel, le cauchemar et le surréalisme. Le développement m'a permis d'apprendre à utiliser rails. Projet étudiant.</p>
+    </div> -->
 
 
 
